# stellaj-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  docker-compose.yaml
config/keycloak/: OIDC.json  client.json  realm.json
public-event/: Cargo.toml
public-event/src/: lib.rs
src/: auth.rs  event.rs  main.rs
static/: index.html
static/auth/: login-token.html
stellaj-client/: Cargo.toml  index.html
stellaj-client/css/: main.scss
stellaj-client/css/abstracts/: _mixins.scss
stellaj-client/css/base/: _base.scss
stellaj-client/css/components/: _button.scss
stellaj-client/css/layout/: _body.scss  _header.scss
stellaj-client/css/pages/: _home.scss
stellaj-client/css/themes/: _dark.scss  _import.scss  _light.scss
stellaj-client/src/: header.rs  main.rs  map.rs  welcome.rs
stellaj-client/src/map/: ellipse.rs  mod.rs  planete.rs
stellaj-server/: Cargo.toml
stellaj-server/src/: auth.rs  event.rs  game.rs  main.rs
stellaj-server/static/auth/: login-token.html
