[package]
name = "stellaj-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventstore = "1.0"
futures = "0.3"
serde= {version ="1.0", features = ["derive"]}
tokio = { version = "1.15", features = ["full"] }
uuid = "0.8"