[package]
name = "stellaj-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-files = "0.6.0-beta.10"
actix-web = "4.0.0-beta.14"
actix-web-actors = "4.0.0-beta.10"
eventstore = "1.0"
futures = "0.3"
serde= {version ="1.0", features = ["derive"]}
tokio = { version = "1.15", features = ["full"] }
uuid = "0.8"