[package]
name = "stellaj-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies]
eventstore = "1.0"
#rocket-jwt-authorization = "0.2.1"
serde_json = "1.0"