[package]
name = "stellaj-client"
version = "0.0.1"
edition = "2021"

[dependencies]
yew = "0.19"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2.0"
gloo-events = "0.1.1"
gloo-utils = "0.1"
serde_json = "1"
serde_derive = "1.0"
serde = "1.0"

[dependencies.web-sys]
version="0.3"
features=[
    "Event",
    "EventSource",
    "Headers",
    "HtmlInputElement",
    "MessageEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]