[package]
name = "stellaj-client"
version = "0.0.1"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
enum-iterator = "0.7.0"
js-sys = "0.3"
gloo-events = "0.1.1"
gloo-utils = "0.1"
gloo-storage = "0.2.0"
log = "0.4"
reqwasm = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
speedy2d = "1.5.0"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = "0.19"

[dependencies.web-sys]
version="0.3"
features=[
    "Event",
    "EventSource",
    "Headers",
    "HtmlInputElement",
    "Location",
    "MessageEvent",
    "Url",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]