[package]
name = "stellaj-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventstore = "1.0"
jsonwebtokens = "1.1"
public-event = { path = "../public-event" }
urlencoding = "2.1.0"
reqwest = "0.11.9"
serde_json = "1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
